--- a/ZkCommunicate_/ZkCommunicate_/ZkCommunicate_.csproj
+++ b/ZkCommunicate_/ZkCommunicate_/ZkCommunicate_.csproj
@@ -163,11 +163,13 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Device_\Device_Management.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\Connect_deviceModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -196,7 +198,6 @@
     <Content Include="Content\vendor\jquery-easing\jquery.easing.compatibility.js" />
     <Content Include="Content\vendor\jquery-easing\jquery.easing.js" />
     <Content Include="Content\vendor\jquery-easing\jquery.easing.min.js" />
-    <Content Include="Content\vendor\jquery\jquery.js" />
     <Content Include="Content\vendor\jquery\jquery.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -267,6 +268,7 @@
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-migrate-1.2.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
@@ -278,9 +280,9 @@
     <Content Include="Scripts\js\sb-admin-charts.js" />
     <Content Include="Scripts\js\sb-admin-charts.min.js" />
     <Content Include="Scripts\js\sb-admin-datatables.js" />
-    <Content Include="Scripts\js\sb-admin-datatables.min.js" />
+    <Content Include="Scripts\js\site.datatables.min.js" />
     <Content Include="Scripts\js\sb-admin.js" />
-    <Content Include="Scripts\js\sb-admin.min.js" />
+    <Content Include="Scripts\js\site.min.js" />
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
@@ -338,7 +340,7 @@
       <Lcid>0</Lcid>
       <WrapperTool>tlbimp</WrapperTool>
       <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
   <PropertyGroup>
