--- a/ZkCommunicate_/ZkCommunicate_/ZkCommunicate_.csproj
+++ b/ZkCommunicate_/ZkCommunicate_/ZkCommunicate_.csproj
@@ -265,6 +265,7 @@
     <Content Include="Content\vendor\font-awesome\scss\_stacked.scss" />
     <Content Include="Content\vendor\font-awesome\scss\_variables.scss" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
+    <Content Include="Images\ellipsis.gif" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
